# vgg_automerge

./: .gitignore  .gitmodules  .secret  404.html  CMakeLists.txt  CMakePresets.json  CNAME  LICENSE  README.md  index.html  search.html  sitemap.xml
api/: index.html
automerge/: Automerge.cpp  Automerge.h  CMakeLists.txt  Change.cpp  Change.h  ChangeGraph.cpp  ChangeGraph.h  Clock.h  Columnar.cpp  Columnar.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  Error.h  ExId.h  IndexedCache.h  Keys.cpp  Keys.h  Op.cpp  Op.h  OpObserver.h  OpSet.cpp  OpSet.h  OpTree.cpp  OpTree.h  Patch.h  Query.cpp  Query.h  StringCache.cpp  StringCache.h  Sync.cpp  Sync.h  Value.h  demo.cpp  helper.cpp  helper.h  leb128.h  legacy.cpp  legacy.h  (+2 more)
automerge/query/: InsertNth.cpp  InsertNth.h  Len.cpp  Len.h  Nth.cpp  Nth.h  OpId.cpp  OpId.h  QueryKeys.cpp  QueryKeys.h  QueryKeysAt.cpp  QueryKeysAt.h  QueryProp.cpp  QueryProp.h  SeekOp.cpp  SeekOp.h  SeekOpWithPatch.cpp  SeekOpWithPatch.h
automerge/sync/: Bloom.cpp  Bloom.h  State.cpp  State.h
automerge/transaction/: CommitOptions.h  Transactable.h  Transaction.cpp  Transaction.h
benchmark/: CMakeLists.txt  map.cpp  sync.cpp
docs/: mkdocs.yml
docs/docs/: api.md  index.md
search/: search_index.json
test/: CMakeLists.txt  automerge_test.cpp
